<resources>
    <string name="app_name">FirebaseLearning</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter name</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
</resources>